Updated package.json with latest modules; Fixed the header scroll offset for the object detail page; Improved the ko-tile layout for xs viewport although the app is not responsive yet.
Former-commit-id: 3b3143f420285206ada126fba881600dc02daacb

--- a/src/main/static/css/ot2.css
+++ b/src/main/static/css/ot2.css
@@ -114,6 +114,7 @@ a:hover {
 	position: absolute;
 	margin-top: 60px;
 	width:100%;
+	min-width: 1584px;
 }
 
 .ot-type{
